Bug 94122 - Automatic colors (white on dark background) (or colors predefined ?) not exported to PPTX correctly
Summary: Automatic colors (white on dark background) (or colors predefined ?) not expo...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: filter:ooxml
: 144462 (view as bug list)
Depends on:
Blocks: OOXML-Doc-Themes
  Show dependency treegraph
 
Reported: 2015-09-11 05:21 UTC by Ljiljan
Modified: 2022-09-26 14:12 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Working file in ODP (110.79 KB, application/vnd.oasis.opendocument.presentation)
2015-09-11 05:22 UTC, Ljiljan
Details
test file: shapes with various backgound colors and text with color automatic (43.61 KB, application/vnd.oasis.opendocument.presentation)
2015-10-05 12:21 UTC, Cor Nouws
Details
Sample ODS (9.44 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-02-24 06:48 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ljiljan 2015-09-11 05:21:37 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.85 Safari/537.36
Build Identifier: LibreOffice 5.0.1.2

Original template was bought in PPTX format. LO perfectly opens it, saves it in ODP and opens it again. However, if this document is saved in PPT or PPTX there are some changes in colors.


Reproducible: Always

Steps to Reproduce:
1. Open ODP file attached in document
2. Save it to PPTX
3. Observe the changes in colors. 

Another approach:

1. Draw dark rectangle and write some text inside (Impress will change text color to white)
2. Save it to PPTX
3. Open it again in Impress (white color is not saved).
Actual Results:  
1. Automatic white colors on dark background is not saved 
2. Background colors of objects (probably coming from PPTX template styles colors are changed

Expected Results:  
1. Automatic white colors on dark background should be saved 
2. Background colors of objects (probably coming from PPTX template styles colors) should be saved

[Information automatically included from LibreOffice]
Locale: en-US
Module: PresentationDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes


Reset User Profile?No
Comment 1 Ljiljan 2015-09-11 05:22:08 UTC
Created attachment 118595 [details]
Working file in ODP

Working file in ODP
Comment 2 Buovjaga 2015-09-18 12:36:44 UTC
Saved to PPTX.
This text changes from white to black: This is rectangle (white color is automatic in ODP)
One of the three branches on the right changes shape slightly: the curve droops downwards.

Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: fi-FI (fi_FI)
Comment 3 Cor Nouws 2015-10-05 12:00:48 UTC Comment hidden (obsolete)
Comment 4 Cor Nouws 2015-10-05 12:20:45 UTC
(In reply to Cor Nouws from comment #3)

>  > all versions earlier then 4.2.x show black text
> 
> Could there be some change in the algorithm choosing whether automatic
> should show black or white? Looks so.
> This might also influence the result when saving as PPT(x) and reopening?

All versions prior to 4.2.0 show no white (automatic) color in a odp document too.
So the handling in odp files has been improved - but in ms PPT(X) files it hasn't been yet implemented.
Comment 5 Cor Nouws 2015-10-05 12:21:50 UTC
Created attachment 119307 [details]
test file: shapes with various backgound colors and text with color automatic
Comment 6 Ljiljan 2015-10-05 20:18:54 UTC Comment hidden (obsolete)
Comment 7 Cor Nouws 2015-10-06 05:30:39 UTC
(In reply to Ljiljan from comment #6)
> Maybe the best solution is to disable autocolor? I would be forced to change
> color to white and no problem... Currently, you can't rely on LibreOffice
> auto-suggestion.

If we start doing that, there must be more features disabled in LibreOffice since (export to) MsOffice does not (yet) support them. Not a reasonable option I think.
Comment 8 Ljiljan 2015-10-07 08:04:10 UTC
(In reply to Cour Nozws from comment #7)

>If we start doing that, there must be more features disabled in LibreOffice >since (export to) MsOffice does not (yet) support them. Not a reasonable option >I think.

Then, this is not ENHANCeMENT, but BUG. 

I reported bug on existing feature, and I didn't require new feature.
Comment 9 Timur 2016-03-14 13:56:55 UTC
According to what I wrote in https://bugs.documentfoundation.org/show_bug.cgi?id=98311#c3 I suggest that bug is about PPT and this one about PPTX. Those are different bugs.
Comment 10 QA Administrators 2017-05-22 13:18:50 UTC Comment hidden (obsolete)
Comment 11 Timur 2017-12-22 09:53:19 UTC Comment hidden (obsolete)
Comment 12 QA Administrators 2019-02-24 03:40:34 UTC Comment hidden (obsolete)
Comment 13 Aron Budea 2019-02-24 06:48:51 UTC
Created attachment 149548 [details]
Sample ODS

Same issue with ODS - XLSX conversion.

Observed using LO 6.3.0.0.alpha0+ (e0745a11597e5d57eb8001a295314e86810a6027) / Windows 7.
Comment 14 QA Administrators 2021-02-24 04:05:52 UTC Comment hidden (obsolete)
Comment 15 Timur 2021-09-13 09:54:55 UTC
*** Bug 144462 has been marked as a duplicate of this bug. ***
Comment 16 Timur 2021-09-13 10:11:47 UTC
MSO 2016 has Automatic font color for Word and Excel, but not for Powerpoint (should be checked in MSO 2019 or 365).
So cases for ODS and ODP are different. 

Automatic font color from LO 7.3+ ODS opens OK in Calc but not in Excel. It's marked automatic but still black where it should be white. But any black background doesn't show Automatic text so it's MSO problem in my case. Doesn't look like LO issue, so I revert to PPTX in title. Needs check in updated MSO.

Automatic font color from LO 7.3+  ODP doesn't show correctly in Impress and Powerpoint.
Comment 17 Timur 2022-05-24 09:31:03 UTC
*** Bug 147991 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2022-09-20 06:23:28 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79ea27ec4418b82af5ba2187ae59cd9c0874060b

tdf#94122 pptx export: fix automatic text color export

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2022-09-20 07:35:49 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c544caf08b8809272aaced1186997292b74da575

tdf#94122 pptx export: fix automatic text color export

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Timur 2022-09-26 14:12:42 UTC
Verified in MSO and LO for PPTX. PPT is a separate bug.