tdf#94122 pptx export: fix automatic text color export

MS Powerpoint doesn't have automatic colors unlike Word or Excel.

Therefore on export the automatic text color should be first resolved
and then exported.

Change-Id: Ied2c3a4235da403350d8518a3414ff6a372b57a8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140059
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>